updated new questions for interview