@@ -1,6 +1,12 @@
 package com.lucas.coding.affirm;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
 
 /**
  * Affirm Loan Requests Processing - Part 1
@@ -27,9 +33,10 @@ import java.util.*;
  */
 public class AffirmLoanProcessingApp {
 
-	/** Loan 数据模型 */
+
 	static class Loan {
-		String id, company;
+		String id;
+		String company;
 		double amount;
 
 		Loan(String id, String company, double amount) {
@@ -39,99 +46,191 @@ public class AffirmLoanProcessingApp {
 		}
 
 		public String toString() {
-			return String.format("(%s, %.0f)", id, amount);
+			return String.format("[%s, %s, %s]", id, company, amount);
 		}
 	}
 
-	/** 内部服务类，封装核心逻辑 */
-	static class RootService {
-		/**
-		 * 计算每个公司对应的顶层母公司
-		 */
-		public Map<String, String> getRootMap(Map<String, List<String>> tree) {
-			Map<String, String> parent = new HashMap<>(); // child -> parent
-			Set<String> all = new HashSet<>();
-			all.addAll(tree.keySet());
+	static class Transaction {
+		String loanId;
+		String paidCompany;
+		double amount;
 
-			// 2) 反转映射：parent -> [children] 变 child -> parent，并把子公司放到 all
+		Transaction(String loanId, String paidCompany, double amount) {
+			this.loanId = loanId;
+			this.paidCompany = paidCompany;
+			this.amount = amount;
+		}
+		@Override
+		public String toString() {
+			return String.format("[%s, %s, %s]", loanId, paidCompany, amount);
+		}
+	}
+
+	/**
+	 * 1. findRoot method as helper -> fetch the {company: it's root}
+	 * 2. getRoot helper method
+	 */
+	static class RootService {
+
+		// return {c: it's root as d}
+		public Map<String, String> findRoot(Map<String, List<String>> tree) {
+			Map<String, String> childToParentMap = new HashMap<>(); // parent -> child
+			Set<String> all = new HashSet<>();
+			all.addAll(tree.keySet()); // company_a, company_d, ...
+
 			for (var e : tree.entrySet()) {
-				String p = e.getKey();
+				String key = e.getKey();
 				List<String> children = e.getValue();
 				for (String c : children) {
-					parent.put(c, p);
+					childToParentMap.put(c, key);
 					all.add(c);
 				}
 			}
 
 			// 3) 求每个公司的根；findRoot 内部带路径写回
-			Map<String, String> root = new HashMap<>();
-			for (String comp : all) {
-				findRoot(comp, parent, root);
+			Map<String, String> rootMap = new HashMap<>();
+			for (String companyName : all) {
+				// 对于每一个Key 找到root
+				findRoot(companyName, childToParentMap, rootMap);
 			}
-			return root;
+
+			System.out.println("childToParentMap is : " + childToParentMap);
+			System.out.println("rootMap is : " + rootMap);
+
+			return rootMap;
 		}
 
-		/**
-		 * 找单个公司的顶层母公司（简化版实现）
-		 * 沿着 parent 链一路往上走直到没有父节点
-		 * 记忆化避免重复计算
-		 */
-		private String findRoot(String comp, Map<String, String> parent, Map<String, String> root) {
-			if (root.containsKey(comp)) {
-				return root.get(comp);
+		//	usage: 找单个公司的顶层母公司（简化版实现）
+		//	logic: 沿着 parent 链一路往上走直到没有父节点
+		private void findRoot(String companyName, Map<String, String> childToParentMap,
+				Map<String, String> rootMap) {
+
+			if (rootMap.containsKey(companyName)) {
+				rootMap.get(companyName);
+				return;
 			}
 
-			String cur = comp;
-			while (parent.containsKey(cur)) {
-				cur = parent.get(cur);
+			String currName = companyName;
+			while (childToParentMap.containsKey(currName)) {
+				currName = childToParentMap.get(currName);
 			}
 
-			root.put(comp, cur);
-			return cur;
+			// finished finding the root
+			rootMap.put(companyName, currName);
 		}
 
-		/**
-		 * 将贷款按顶层母公司分组
-		 */
-		public Map<String, List<Loan>> groupLoansByRoot(List<Loan> loans, Map<String, String> rootMap) {
-			Map<String, List<Loan>> grouped = new HashMap<>();
+
+		public Map<String, List<Loan>> getGroupLoansByRoot(Map<String, String> rootMap, List<Loan> loans) {
+			Map<String, List<Loan>> loansByRoot = new HashMap<>();
+
 			for (Loan loan : loans) {
-				String root = rootMap.getOrDefault(loan.company, loan.company);
-				grouped.computeIfAbsent(root, k -> new ArrayList<>()).add(loan);
+				String companyName = loan.company;
+				String root = rootMap.getOrDefault(companyName, companyName);
+				if (!loansByRoot.containsKey(root)) {
+					loansByRoot.put(root, new ArrayList<>());
+				}
+				loansByRoot.put(root, List.of(loan));
+
 			}
-			return grouped;
+			System.out.println("loansByRoot is : " + loansByRoot);
+			return loansByRoot;
+		}
+
+		/* -------------------- Part 2 -------------------- */
+
+		/**
+		 * 构建 root -> (loanId -> Loan) 索引，便于 O(1) 命中
+		 * {
+		 *   "company_d": {
+		 *       "L1" -> Loan(id=L1, company=company_c, amount=1000),
+		 *       "L2" -> Loan(id=L2, company=company_b, amount=2000)
+		 *   },
+		 *   "company_x": {
+		 *       "L3" -> Loan(id=L3, company=company_x, amount=500)
+		 *   }
+		 * }
+		 * */
+
+		public Map<String, Map<String, Loan>> buildNestedLoanMapByRootCompany(Map<String, String> rootMap, List<Loan> loans) {
+			Map<String, Map<String, Loan>> loanMapByRootCompany = new HashMap<>();
+			for (Loan loan : loans) {
+				String companyName = loan.company;
+				String loanId = loan.id;
+				String root = rootMap.getOrDefault(companyName, companyName);
+				if (!loanMapByRootCompany.containsKey(root)) {
+					loanMapByRootCompany.put(root, new HashMap<>());
+				}
+				loanMapByRootCompany.get(root).put(loanId, loan);
+			}
+
+			System.out.println("loanMapByRootCompany is : " + loanMapByRootCompany);
+			return loanMapByRootCompany;
+		}
+
+		/**
+		 * 对交易进行匹配：按（root + loanId）命中
+		 * - 默认只按 loanId 精确命中；如需金额校验，打开 amount 校验段
+		 */
+		public List<String> matchTransactions(Map<String, String> rootMap,
+				Map<String, Map<String, Loan>> loanMapByRootCompany,
+				List<Transaction> txs) {
+			List<String> out = new ArrayList<>();
+			for (Transaction tx : txs) {
+				String txCompanyName = tx.paidCompany;
+				String txRoot = rootMap.getOrDefault(txCompanyName, txCompanyName);
+				Map<String, Loan> bucket = loanMapByRootCompany.get(txRoot);
+				Loan hit = (bucket == null) ? null : bucket.get(tx.loanId);
+
+				if (hit == null) {
+					out.add("UNMATCHED: " + tx + " (root=" + txRoot + ")");
+					continue;
+				}
+
+				out.add("HIT: " + tx + " -> loan " + hit + " (root=" + txRoot + ")");
+			}
+			return out;
 		}
 	}
+
+	/**
+	 *  *   "company_a": ["company_b", "company_c"],
+	 *  *   "company_d": ["company_a"]
+	 *
+	 *  company_d
+		 * 	└── company_a
+		 *      ├── company_b
+		 *      └── company_c
+	 */
 
 	public static void main(String[] args) {
-		RootService rootService = new RootService();
-
-		// 示例层级数据
 		Map<String, List<String>> tree = new HashMap<>();
 		tree.put("company_a", Arrays.asList("company_b", "company_c"));
-		tree.put("company_d", Collections.singletonList("company_a"));
+		tree.put("company_d", List.of("company_a"));
 
-		// 计算每个公司的顶层母公司 -> {company: it's root company}
-		Map<String, String> rootMap = rootService.getRootMap(tree);
-		System.out.println("rootMap is : " + rootMap);
+		RootService rootService = new RootService();
+		Map<String, String> rootMap = rootService.findRoot(tree);
 
-		// 示例贷款数据
-		List<Loan> loans = Arrays.asList(
-				new Loan("L1", "company_c", 1000),
-				new Loan("L2", "company_b", 2000),
-				new Loan("L3", "company_x", 500)
+		Loan l1 = new Loan("L1", "company_c", 1000);
+		Loan l2 = new Loan("L2", "company_b", 2000);
+		Loan l3 = new Loan("L3", "company_x", 500);
+		List<Loan> loans = Arrays.asList(l1, l2, l3);
+
+		// get grouped loans
+		// output = {company_d=[load id:L2 company:company_b amount:2000.0]}
+		Map<String, List<Loan>> loansByRoot = rootService.getGroupLoansByRoot(rootMap, loans);
+
+		// Part2：索引 + 匹配
+		Map<String, Map<String, Loan>> loanMapByRootCompany = rootService.buildNestedLoanMapByRootCompany(rootMap, loans);
+
+		List<Transaction> txs = Arrays.asList(
+				new Transaction("L1", "company_a", 1000),   // root(a)=d -> 在 d 的桶里能命中 L1
+				new Transaction("L2", "company_d", 2000),   // root(d)=d -> 命中 L2
+				new Transaction("L9", "company_c", 999),    // loanId不存在 -> UNMATCHED
+				new Transaction("L3", "company_x", 500)     // 独立 root=x -> 命中
 		);
 
-		// 按顶层母公司分组贷款
-		Map<String, List<Loan>> groupedLoans = rootService.groupLoansByRoot(loans, rootMap);
-
-		// 输出结果
-		for (var entry : groupedLoans.entrySet()) {
-			System.out.println("root=" + entry.getKey() + " -> " + entry.getValue());
-		}
-
-		// root=company_d -> [(L1, 1000), (L2, 2000)]
-		// root=company_x -> [(L3, 500)]
-	}
+		List<String> results = rootService.matchTransactions(rootMap, loanMapByRootCompany, txs);
+		System.out.println("match results:");
+		for (String s : results) System.out.println(" - " + s);
+ 	}
 }
-
